@@ -3,6 +3,10 @@
 
 set -e
 
+require_tmpdir
+
+grep "^/dev/" /proc/mounts | parse_proc_mounts >"$OS_PROBER_TMP/mounted-map" || true
+
 DO_MOUNTED=""
 if [ "$1" = "--mounted" ]; then
 	DO_MOUNTED="1"
@@ -11,13 +15,44 @@ fi
 export DO_MOUNTED
 
 partition="$1"
+if ! mapped="$(mapdevfs "$partition")"; then
+	log "Device '$partition' does not exist; skipping"
+	continue
+fi
 
-for test in /usr/lib/linux-boot-probes/*; do
-	debug "running $test"
-	if [ -x $test ] && [ -f $test ]; then
-		if $test $partition; then
-			debug "linux detected by $test"
-	   		break
+if ! grep -q "^$mapped " "$OS_PROBER_TMP/mounted-map"; then
+	for test in /usr/lib/linux-boot-probes/*; do
+		debug "running $test"
+		if [ -x $test ] && [ -f $test ]; then
+			if $test $partition; then
+				debug "linux detected by $test"
+				break
+			fi
+		fi
+	done
+else
+	mpoint=$(grep "^$mapped " "$OS_PROBER_TMP/mounted-map" | cut -d " " -f 2)
+	if [ "$DO_MOUNTED" ] || ([ "$mpoint" != "/target/boot" ] && [ "$mpoint" != "/target" ] && [ "$mpoint" != "/" ]); then
+		type=$(grep "^$mapped " "$OS_PROBER_TMP/mounted-map" | cut -d " " -f 3)
+		if ! grep -q " $mpoint/boot " "$OS_PROBER_TMP/mounted-map"; then
+			mountboot="$(linux_mount_boot "$partition" "$mpoint")"
+			bootpart="${mountboot%% *}"
+			bootmounted="${mountboot#* }"
+		else
+			bootpart="$partition"
+			bootmounted=0
+		fi
+		for test in /usr/lib/linux-boot-probes/mounted/*; do
+			if [ -f $test ] && [ -x $test ]; then
+				debug "running $test on mounted $partition"
+				if $test $partition $bootpart $mpoint $type; then
+					debug "$test succeeded"
+					break
+				fi
+			fi
+		done
+		if [ "$bootmounted" = 1 ]; then
+			umount $mpoint/boot || true
 		fi
 	fi
-done
+fi
